# coords-nsga2

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  README_CN.md  Todo.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  lint.yml  test.yml
api/: index.html
docs/: api.en.md  api.md  api.zh.md  examples.md  index.en.md  index.md  index.zh.md  install.en.md  usage.en.md  usage.md  usage.zh.md
examples/: demo.ipynb  demoXY.ipynb  index.html  load-optimizer.py  quick-start.py  test.ipynb  test.py  test_parallel.py  variable-n-points.py  visualization-example.py
examples/data/: test.npz  test_optimizer.pkl
index_en/: index.html
install/: index.html
search/: search_index.json
src/: NSGA2.py
src/coords_nsga2/: __init__.py  algorithm.py  coords_nsga2.py  spatial.py  utils.py
src/coords_nsga2/operators/: crossover.py  mutation.py  selection.py
src/coords_nsga2/visualization/: __init__.py  constraint_violations.py  convergence_analysis.py  example.py  hypervolume_trend.py  objective_correlations.py  objective_distributions.py  objective_optimal_layouts.py  optimal_coords.py  parallel_coordinates.py  pareto_front.py  plotter.py  solution_comparison.py
tests/: test_demo.py  test_entire.py  test_parallel.py
usage/: index.html
zh/: index.html
zh/api/: index.html
zh/examples/: index.html
zh/install/: index.html
zh/usage/: index.html
